--- a/package.json
+++ b/package.json
@@ -1,16 +1,29 @@
 {
-  "name": "sunjammer-pose",
+  "name": "sunjammer-poses",
   "version": "1.0.0",
-  "description": "",
+  "description": "A desktop app for the Sunjammer project by Toni Dove that detects poses with Posenet and sends information about them over the network with OSC.",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder",
+    "postinstall": "electron-builder install-app-deps",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Bomani Oseni McClendon",
+  "build": {
+    "appId": "com.electron.sunjammer",
+    "mac": {
+      "category": "public.app-category.video"
+    },
+    "win": {
+      "target": "nsis"
+    }
+  },
   "license": "ISC",
   "devDependencies": {
-    "electron": "^10.1.3"
+    "electron": "^10.1.3",
+    "electron-builder": "^22.8.1"
   },
   "dependencies": {
     "express": "^4.17.1",
